src/styles/components/members.scss
.members.container {
    background: $black;
    display: flex;
    padding-right: 0;
    justify-content: space-between;
    align-items: center;
    // overflow: hidden;

    @media (max-width: 750px) {
        flex-direction: column;
        align-items: flex-start;
    }


    // shown on mobile only
    .hide {
        display: none;

        @media (max-width: 750px) {
            display: block;
        }
    }

    .hide.title {
        @media (max-width: 750px) {
            color: $yellow;
            font-size: 2em;
            margin-bottom: 30px;
        }
    }

    .hide.panels {
        text-align: right;
        width: 100%;
        justify-content: flex-end;
        padding-right: 80px;
        margin-top: 50px;
        display: none;

        @media (max-width: 750px) {
            display: block;
        }
    }

    // end

    .panels {
        display: flex;
        align-items: center;
    }

    .prev,
    .next {
        width: 32px;
        height: 32px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 50%;
        cursor: pointer;
        margin-left: 40px;
        border: 1.4px $white solid;

        path {
            fill: $yellow;
        }
    }

    .left {
        flex: 0 0 40%;
        max-width: 40%;

        @include media("<=920px") {
            flex: 0 0 47%;
            max-width: 47%;
        }

        @include media("<=750px") {
            display: none;
            flex: unset;
            max-width: unset;
        }

        .title {
            color: $yellow;
            margin-bottom: 20px;
        }

        .sub {
            color: $white;
            font-size: 1.2em;
            line-height: 1.7;
            margin-bottom: 50px;
        }

        .button {
            @include button;
            padding: 10px 38px;
            display: inline-block;
            background: $yellow;
            color: $black;
            font-weight: 500;
            font-size: 1.1em;
        }
    }

    .members-slider {
        flex: 0 0 58%;
        max-width: 58%;

        @include media("<=950px") {
            flex: 0 0 54%;
            max-width: 54%;
        }

        @include media("<=920px") {
            flex: 0 0 45%;
            max-width: 45%;
        }

        @include media("<=750px") {
            max-width: 100%;
            flex: unset;
        }
    }


    // slider styles
    .slider {
        padding: 0;

        .slick-list {
            .slick-slide>div {
                padding: 0;
                padding-left: 35px;

                @include media("<=950px") {
                    padding-left: 20px;
                }

                @include media("<=750px") {
                    padding: 0;
                    padding-right: 30px;
                }

            }
        }

        .slick-next,
        .slick-prev {
            display: none !important;
        }
    }

    .box-container {
        width: 100%;
        height: 400px;

        @include media("<=1100px") {
            height: 350px;
        }

        @include media("<=950px") {
            height: 320px;
        }

        @include media("<=920px") {
            height: 400px;
        }

        @include media("<=600px") {
            height: 500px;
        }

        .reveal {
            height: 100%;
            width: 100%;
        }

        .bg-image {
            height: 100%;
        }

        .content {
            padding: 20px 5px;
        }

        .name {
            font-family: $Sang;
            font-size: 1.6em;
            color: $yellow;
            font-weight: 500;

            @include media("<=950px") {
                font-size: 1.4em;
            }

            @include media("<=750px") {
                font-size: 1.8em;
                margin-bottom: 5px;
            }

        }

        .position {
            color: #CDCDCD;
            font-size: 1.05em;

            @include media("<=750px") {
                font-size: 1.2em;
            }
        }
    }
}

